--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                             E-mail
                         </a>
-                        <a href="https://github.umn.edu/gonza858">
+                        <a href="https://github.com/User952">
                             <i class="fa fa-github" aria-hidden="true"></i>
                             GitHub
                         </a>
@@ -396,9 +396,9 @@
                 </a>
             </div>
             <div class="link">
-                <a href="https://github.umn.edu/gonza858">
+                <a href="https://github.com/User952">
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-                    <p>github.umn.edu/gonza858</p>
+                    <p>github.com/User952</p>
                 </a>
             </div>
             <div class="link">
