Updated links in index.html.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <i class="fa fa-github" aria-hidden="true"></i>
                             GitHub
                         </a>
-                        <a href="Xavier Gonzalez.pdf">
+                        <a href="resume.pdf">
                             <i class="fa fa-file-text-o" aria-hidden="true"></i>
                             Résumé
                         </a>
@@ -402,7 +402,7 @@
                 </a>
             </div>
             <div class="link">
-                <a href="Xavier Gonzalez.pdf">
+                <a href="resume.pdf">
                     <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i>
                     <p>Résumé</p>
                 </a>
