--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 </a>
             </div>
             <div class="link">
-                <a href="resume.pdf">
+                <a href="resue.pdf">
                     <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i>
                     <p>Résumé</p>
                 </a>
