--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <!--End of Image Carousel and Buttons-->
         
         <!--About-->
-        <div id="about-section"></div> <!--Helps properly link to about,-->
-        <div id="about"><!--because of the navigation bar blocking it.-->
+        <div id="about-section"></div> <!--Helps properly link to about.-->
+        <div id="about">
             <div>
                 <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
                 <h2>About</h2>
