Changed the "About" section.
Revised a minor error.

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 campus (e.g., my Archery and Computing clubs), or staying
                 healthy at the campus gym.
                 <br><br>
-                I am currently searching for a
-                research or internship in the Software Development field, in
-                order to gain valuable real-world experience and push my
-                Developer career forward.
+                I am currently searching for a research position or an
+                internship in the Software Development field, in order to gain
+                valuable real-world experience and push my Developer career
+                forward.
             </p>
         </div>
         <!--End of About-->
