Modified links after organizing files into folders.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <title>Xavier Gonzalez</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="resume.css" type="text/css" rel="stylesheet">
+        <link href="personalWebsite/scriptsAndFiles/resume.css" type="text/css" rel="stylesheet">
         <link rel="stylesheet" href=
             "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script type="text/javascript" src="resume.js"></script>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png">
+        <script type="text/javascript" src="personalWebsite/scriptsAndFiles/resume.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="personalWebsite/images/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon"
+            href="personalWebsite/images/favicon-32x32.png">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono"
             rel="stylesheet">
     </head>
@@ -32,7 +33,7 @@
                             <i class="fa fa-github" aria-hidden="true"></i>
                             GitHub
                         </a>
-                        <a href="resume.pdf">
+                        <a href="personalWebsite/scriptsAndFiles/resume.pdf">
                             <i class="fa fa-file-text-o" aria-hidden="true"></i>
                             Résumé
                         </a>
@@ -51,11 +52,14 @@
         <!--Image Carousel and Buttons-->
         <div id="image-carousel">
             <div id="left-div" onclick="previous()">
-                <img src="carousel-arrowLeft.png">
+                <img
+                    src="personalWebsite/scriptsAndFiles/carousel-arrowLeft.png">
             </div>
-            <img id="carousel" src="carousel-slide_1.jpg">
+            <img id="carousel"
+                src="personalWebsite/scriptsAndFiles/carousel-slide_1.jpg">
             <div id="right-div" onclick="next()">
-                <img src="carousel-arrowRight.png">
+                <img
+                    src="personalWebsite/scriptsAndFiles/carousel-arrowRight.png">
             </div>
         </div>
         <!--End of Image Carousel and Buttons-->
@@ -290,7 +294,7 @@
             </div>
             <div class="project-item">
                 <h3>Personal Résumé Website</h3>
-                <img src="experience-personalWebsite.PNG">
+                <img src="personalWebsite/images/experience-personalWebsite.PNG">
                 <p>
                     I began developing this personal website in January 2018 to
                     showcase my résumé in a visual form, while also
@@ -300,7 +304,7 @@
             </div>
             <div class="project-item">
                 <h3>University Dining Services Worker</h3>
-                <img src="experience-umnDining.jpg">
+                <img src="personalWebsite/images/experience-umnDining.jpg">
                 <p>
                     From September 2016 to January 2018, I worked at several
                     food courts throughout my college. Activities included
@@ -310,7 +314,7 @@
             </div><br>
             <div class="project-item">
                 <h3>Shipping Simulation (Java)</h3>
-                <img src="experience-shipping.png">
+                <img src="personalWebsite/images/experience-shipping.png">
                 <p>
                     A class project that tasked me with creating a simulation
                     for a shipping company. Included details such as random
@@ -321,7 +325,7 @@
             </div>
             <div class="project-item">
                 <h3>Single-Player Battleship (Java)</h3>
-                <img src="experience-battleship.jpg">
+                <img src="personalWebsite/images/experience-battleship.jpg">
                 <p>
                     For this assignment, I constructed a game of Battleship.
                     Several commands were devised, such as the option of a recon
@@ -344,7 +348,7 @@
                 <h3>
                     University of Minnesota Twin Cities - Minneapolis, Minnesota
                 </h3>
-                <img src="education-umn.png"><hr><hr>
+                <img src="personalWebsite/images/education-umn.png"><hr><hr>
                 <ul>
                     <li>2016–Present</li>
                     <li>Bachelor of Science, Computer Science (Expected May
@@ -364,7 +368,7 @@
                 <h3>
                     Anoka-Ramsey Community College - Coon Rapids, Minnesota
                 </h3>
-                <img src="education-ar.png"><hr><hr>
+                <img src="personalWebsite/images/education-ar.png"><hr><hr>
                 <ul>
                     <li>2014–2016</li>
                     <li>Postsecondary Enrollment Options</li>
@@ -401,7 +405,7 @@
                 </a>
             </div>
             <div class="link">
-                <a href="resume.pdf">
+                <a href="personalWebsite/scriptsAndFiles/resume.pdf">
                     <i class="fa fa-file-text-o fa-2x" aria-hidden="true"></i>
                     <p>Résumé</p>
                 </a>
