--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
             <div class="project-item">
                 <h3>Personal Résumé Website</h3>
-                <img src="personalWebsite/images/android-chrome-512x512.png">
+                <img src="personalWebsite/images/experience-umnDining.jpg">
                 <p>
                     I began developing this personal website in January 2018 to
                     showcase my résumé in a visual form, while also
