Minor typo fixed.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 class="collapsed"><i class="fa fa-file-text-o"
                 aria-hidden="true"></i> Résumé
             </a>
-            <!--Section for the collapsable navigation bar is separated.-->
+            <!--Section for the collapsible navigation bar is separated.-->
             <div id="contact-block"> <!--Drop-down Contact block-->
                 <a href="#contact-section">
                     <i class="fa fa-sort-desc fa-inverse"
