Changed initial-scale, added changeIcon().
Modified initial-scale from 1 to 1.0. Added changeIcon() to the "icon" class.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Xavier Gonzalez</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="personalWebsite/scriptsAndFiles/resume.css"
             type="text/css" rel="stylesheet">
         <link rel="stylesheet" href=
@@ -67,7 +67,8 @@
             <a href="#experience-section">Experience</a>
             <a href="#skillset-section">Skillset</a>
             <a href="#about-section">About</a>
-            <a href="javascript:void(0);" class="icon" onclick="collapse()">
+            <a href="javascript:void(0);" class="icon"
+               onclick="collapse(); changeIcon()">
                 <i class="fa fa-bars"></i>
             </a>
         </nav>
