Added more information in About.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
                 campus (e.g., my Archery and Computing clubs), or staying
                 healthy at the campus gym.
                 <br><br>
+                My dream is to become a developer;
+                I have not yet resolved between the front- or back-end aspect of
+                it—or possibly both. I am currently focusing on the front
+                end by endeavoring to learn jQuery and Node.js while
+                simultaneously completing my educational assignments.
+                <br><br>
                 I am currently searching for a technology-related research
                 position or internship, in order to gain valuable real-world
                 experience and push my career forward.
