--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 My dream is to become a developer;
                 I have not yet resolved between the front- or back-end aspect of
                 it—or possibly both. I am currently focusing on the front
-                end by endeavoring to learn jQuery and Node.js while
-                simultaneously completing my educational assignments.
+                end by endeavoring to learn jQuery while simultaneously
+                completing my educational assignments.
                 <br><br>
                 I am currently searching for a technology-related research
                 position or internship, in order to gain valuable real-world
@@ -196,6 +196,16 @@
                         <td>
                             <i class="fa fa-star filled"></i>
                             <i class="fa fa-star filled"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>jQuery:</td>
+                        <td>
+                            <i class="fa fa-star filled"></i>
+                            <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
