--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     I began developing this personal website in January 2018 to
                     showcase my résumé in a visual form, while also
                     demonstrating my HTML, CSS, and JavaScript prowess. The site
-                    is hosted through GitHub Pages.
+                    is in a private repository through GitHub Pages.
                 </p>
             </div>
             <div class="project-item">
