--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <td>
                             <i class="fa fa-star filled"></i>
                             <i class="fa fa-star filled"></i>
-                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star filled"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                         </td>
@@ -196,7 +196,7 @@
                         <td>
                             <i class="fa fa-star filled"></i>
                             <i class="fa fa-star filled"></i>
-                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star filled"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                         </td>
