--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h2>About</h2>
             </div>
             <p>
-                My name is Xavier Gonzalez and I am a college sophomore (junior
+                My name is Xavier Gonzalez and I am a college junior (senior
                 credit-wise) majoring in Computer Science at the University of
                 Minnesota Twin Cities. After completing my
                 academic tasks, I usually devote the rest of my time into honing
