Name section in the navigation bar refreshes the page instead.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body id="main-section">
         <!--Navigation Bar-->
         <nav class="nav" id="navigationBar">
-            <a href="#main-section" id="name">Xavier Gonzalez</a>
+            <a href="https://user952.github.io" id="name">Xavier Gonzalez</a>
             <a href="#about-section" class="collapsed" id="about-block">
                 About
             </a>
