Updated the stars for jQuery.

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                         <td>jQuery:</td>
                         <td>
                             <i class="fa fa-star filled"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star filled"></i>
+                            <i class="fa fa-star filled"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                         </td>
