--- a/kinematic_calculator/kinematic_calculator.html
+++ b/kinematic_calculator/kinematic_calculator.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Xavier Gonzalez</title>
         <meta charset="UTF-8">
+        <title>Kinematic Calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--<link href="personalWebsite/scriptsAndFiles/resume.css"
             type="text/css" rel="stylesheet">-->
         <link rel="stylesheet" href=
             "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!--<script type="text/javascript"
-            src="personalWebsite/scriptsAndFiles/resume.js">
-        </script>-->
         <link rel="shortcut icon" type="image/x-icon" 
             href="personalWebsite/images/favicon.ico">
         <link rel="shortcut icon" type="image/x-icon"
@@ -19,6 +16,10 @@
             rel="stylesheet">
     </head>
     <body>
-    	<p>Test</p>	
+    	<p>Test</p>
+    	<!--<script type="text/javascript"
+            src="personalWebsite/scriptsAndFiles/resume.js">
+        </script>-->
     </body>
+    
 </html>
