--- a/Kinematic_Calculator/kinematic_calculator.html
+++ b/Kinematic_Calculator/kinematic_calculator.html
@@ -7,10 +7,9 @@
         <link href="CSS/kinematic_calculator.js" rel="stylesheet">
         <link rel="stylesheet" href=
             "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="~/personalWebsite/images/favicon.ico"
-            rel="shortcut icon" type="image/x-icon">
-        <link href="~/personalWebsite/images/favicon-32x32.png"
-            rel="shortcut icon" type="image/x-icon">
+        <link href="Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="Images/favicon-32x32.png" rel="shortcut icon"
+            type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono"
             rel="stylesheet">
     </head>
