--- a/Kinematic_Calculator/kinematic_calculator.html
+++ b/Kinematic_Calculator/kinematic_calculator.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <meta charset="UTF-8">
-        <title>Kinematic Calculator</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="CSS/kinematic_calculator.js" rel="stylesheet">
-        <link rel="stylesheet" href=
-            "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-        <link href="Images/favicon-32x32.png" rel="shortcut icon"
-            type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono"
-            rel="stylesheet">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Kinematic Calculator</title>
+      <link href="CSS/kinematic_calculator.css" rel="stylesheet">
+      <!-- <link rel="stylesheet" href=
+          "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+      <link href="Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+      <link href="Images/favicon-32x32.png" rel="shortcut icon"
+          type="image/x-icon">
+      <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+          rel="stylesheet"> -->
     </head>
     <body>
-    	<p>Test</p>
+      <header>
+        <a class="title" href="#">Kinematic Calculator</a>
+        <a href="#">About</a>
+      </header>
+      
+      <main>
+        <p>Test</p>
+        <form>
+           <input type="text" name="i_velocity" /><br>
+           <input type="text" name="f_velocity" /><br>
+           <input type="text" name="distance" /><br>
+           <input type="text" name="time" /><br>
+           <input type="text" name="acceleration" /><br>
+           <input type="submit" value="Submit" /><br>
+        </form>
+      </main>
+      
+      <footer>
+          <p>Footer</p>
+      </footer>
     	<script src="JavaScript/kinematic_calculator.js"></script>
     </body>
 </html>
