--- a/Kinematic_Calculator/kinematic_calculator.html
+++ b/Kinematic_Calculator/kinematic_calculator.html
@@ -15,9 +15,10 @@
     </head>
     <body>
       <header>
-        <a class="title" href="#">Kinematic Calculator</a>
-        <a href="#">About</a>
+        <a id="title" href="#">Kinematic Calculator</a>
+        <a id="about"href="#">About</a>
       </header>
+      <div id="about-description">Temporary description.</div>
       
       <main>
         <p>Test</p>
@@ -34,6 +35,10 @@
       <footer>
           <p>Footer</p>
       </footer>
-    	<script src="JavaScript/kinematic_calculator.js"></script>
+      
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+      <script src="JavaScript/kinematic_calculator.js"></script>
     </body>
 </html>
