Minor alterations to the form's layout.

--- a/Kinematic_Calculator/kinematic_calculator.html
+++ b/Kinematic_Calculator/kinematic_calculator.html
@@ -25,21 +25,11 @@
         <img id="equations" src="Images/1646786.png" alt="Kinematic Equations">
         
         <form autocomplete="on">
-          <label for="i_velocity">Initial velocity:
-            <input id="i_velocity" type="text" name="value" placeholder="m/s" required autofocus/><br>
-          </label>
-          <label for="f_velocity">Final velocity:
-            <input id="f_velocity" type="text" name="value" placeholder="m/s" required /><br>
-          </label>
-          <label for="distance">Distance:
-            <input id="distance" type="text" name="value" placeholder="m" required /><br>
-          </label>
-          <label for="time">Time:
-            <input id="time" type="text" name="value" placeholder="s" required /><br>
-          </label>
-          <label for="acceleration">Acceleration:
-            <input id="acceleration" type="text" name="value" placeholder="m/s^2" required /><br>
-          </label>
+          <label for="i_velocity">Initial velocity:<input id="i_velocity" type="text" name="value" placeholder="m/s" required autofocus></label><br>
+          <label for="f_velocity">Final velocity:<input id="f_velocity" type="text" name="value" placeholder="m/s" required></label><br>
+          <label for="distance">Distance:<input id="distance" type="text" name="value" placeholder="m" required></label><br>
+          <label for="time">Time:<input id="time" type="text" name="value" placeholder="s" required></label><br>
+          <label for="acceleration">Acceleration:<input id="acceleration" type="text" name="value" placeholder="m/s^2" required></label><br>
           <input type="submit" value="Submit" /><br>
         </form>
       </main>
