--- a/Kinematic_Calculator/kinematic_calculator.html
+++ b/Kinematic_Calculator/kinematic_calculator.html
@@ -7,7 +7,9 @@
       <link href="CSS/kinematic_calculator.css" rel="stylesheet">
       <!-- <link rel="stylesheet" href=
           "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/
+        css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a
+        4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link href="Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
       <link href="Images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono"
@@ -25,7 +27,9 @@
         <img id="equations" src="Images/1646786.png" alt="Kinematic Equations">
         
         <form autocomplete="on">
-          <label for="i_velocity">Initial velocity:<input id="i_velocity" type="text" name="value" placeholder="m/s" required autofocus></label><br>
+          <label for="i_velocity">Initial velocity:<input id="i_velocity"
+            type="text" name="value" placeholder="m/s" required autofocus>
+            </label><br>
           <label for="f_velocity">Final velocity:<input id="f_velocity" type="text" name="value" placeholder="m/s" required></label><br>
           <label for="distance">Distance:<input id="distance" type="text" name="value" placeholder="m" required></label><br>
           <label for="time">Time:<input id="time" type="text" name="value" placeholder="s" required></label><br>
@@ -43,7 +47,9 @@
         </div>
       </footer>
       
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
       <script src="JavaScript/kinematic_calculator.js"></script>
     </body>
 </html>
