--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@
                             <i class="fa fa-star"></i>
                         </td>
                     </tr>
+                    <tr>
+                        <td>MySQL:</td>
+                        <td>
+                            <i class="fa fa-star filled"></i>
+                            <i class="fa fa-star filled"></i>
+                            <i class="fa fa-star filled"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
             <!--End of Programming Table-->
@@ -372,6 +382,17 @@
                     mode, custom board-sizing, and text graphics.
                 </p>
             </div>
+            <div class="project-item">
+                <h3>Vote Counter (C)</h3>
+                <img src="personalWebsite/images/experience-voting.jpg">
+                <p>
+                    As a project done throughout the semester in several
+                    variations, I constructed a program that would count the
+                    votes from multiple inputted files and determine the winner.
+                    Utilized mutex locks, process/thread creation, and sockets.
+                </p>
+            </div>
+            
         </div>
         <!--End of Experience-->
         
@@ -415,7 +436,7 @@
                     <li>GPA: 3.1/4.0</li>
                     <li>Courses:
                         <ul>
-                            <li>Discrete Structures of Computer Science</li>
+                            <li>Program Design and Development</li>
                             <li>Algorithms and Data Structures</li>
                             <li>Machine Architecture and Organization</li>
                         </ul>
