Remove unnecessary comment.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <title>Xavier Gonzalez</title>
-        <meta charset="UTF-8"> <!-- -->
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="personalWebsite/scriptsAndFiles/resume.css"
             type="text/css" rel="stylesheet">
