Added a link between the Personal Website and the Kinematic Calculator.

--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
     <div id="experience">
       <div class="project-item">
         <div class="project-item-title">
-          <h4>Personal Résumé Website<br>(January 2018; HTML, CSS, JavaScript)</h4>
+          <h4>Personal Résumé Website<br>(January 2018; HTML, CSS,
+          JavaScript)</h4>
         </div>
         <div class="project-item-content">
           <img src="Personal_Website/Images/android-chrome-512x512.png"
@@ -413,7 +414,7 @@
         </div>
       </div>
       
-      <div class="project-item" style="grid-column: 2 / 3;">
+      <div class="project-item">
         <div class="project-item-title">
           <h4>Security Monitor<br>(August 2018 - Present)</h4>
         </div>
@@ -428,6 +429,25 @@
           </p>
         </div>
       </div>
+      
+      <a href="Kinematic_Calculator/kinematic_calculator.html" class="present">
+        <div class="project-item">
+          <div class="project-item-title">
+            <h4>Kinematic Calculator<br>(September 2018 - Present; HTML, CSS,
+            JavaScript)</h4>
+          </div>
+          <div class="project-item-content">
+            <img src="Personal_Website/Images/experience-kinematic-equation-calculator.png"
+              alt="">
+            <p>
+              I am currently building a calculator to facilitate acquiring the
+              required values in kinematic problems. It heavily utilizes
+              JavaScript alongside jQuery as the scripting language of choice,
+              in order to compute the submitted values.
+            </p>
+          </div>
+        </div>
+      </a>
     </div>
     <!-- End of Experience -->
 
