Added a link to another project.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation bar -->
     <nav class="nav" id="navigationBar">
       <!-- Collapsed navigation bar -->
-      <a href="https://user952.github.io" id="name">Xavier Gonzalez</a>
+      <a href="index.html" id="name">Xavier Gonzalez</a>
       <a href="#about-section" class="collapsed" id="about-block">About</a>
       <a href="#skillset-section" class="collapsed">Skillset</a>
       <a href="#experience-section" class="collapsed">Experience</a>
@@ -318,9 +318,11 @@
       <i class="far fa-id-card fa-2x"></i>
       <h2>Experience</h2>
     </div>
-    <div id="experience">
-      <div class="project-item">
-        <div class="project-item-title">
+    
+    <a href="index.html" class="present">
+      <div id="experience">
+        <div class="project-item">
+          <div class="project-item-title">
           <h4>Personal Résumé Website<br>(January 2018; HTML, CSS,
           JavaScript)</h4>
         </div>
@@ -335,6 +337,7 @@
           </p>
         </div>
       </div>
+    </a>
       
       <div class="project-item">
         <div class="project-item-title">
