--- a/Kinematic_Calculator/kinematic_calculator.html
+++ b/Kinematic_Calculator/kinematic_calculator.html
@@ -6,8 +6,8 @@
       <title>Kinematic Calculator</title>
       <link href="CSS/kinematic_calculator.css" rel="stylesheet">
       <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
       <link href="Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
       <link href="Images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon">
@@ -20,7 +20,9 @@
         <a id="title" href="#">Kinematic Calculator</a>
         <a id="about" href="#">About</a>
       </header>
-      <div id="about-description">Temporary description.</div>
+      <div id="about-description">
+        This site is currently a work in progress.
+      </div>
       <!-- End of Header. -->
       
       <!-- Start of Main. -->
