Updated the About section of the personal website.

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <br><br>
         My dream is to become a developer; I have not yet resolved upon either
         the front- or back-end aspect of it (or possibly both). I am currently
-        focusing on the front end by reviewing my skills on it while completing
-        my educational assignments.
+        focusing on the front end by reviewing my skills on it, completing my
+        educational assignments, and working on several personal projects.
         <br><br>
         At the moment, I am searching for a technology-related research position
         or internship, in order to gain valuable real-world experience and push
