Updated an image's name.

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             JavaScript)</h4>
           </div>
           <div class="project-item-content">
-            <img src="Personal_Website/Images/experience-kinematic-equation-calculator.png"
+            <img src="Personal_Website/Images/experience-kinematic-equation-calculator.PNG"
               alt="">
             <p>
               I am currently building a calculator to facilitate acquiring the
