--- a/index.html
+++ b/index.html
@@ -438,17 +438,16 @@
       <a href="Kinematic_Calculator/kinematic_calculator.html" class="present">
         <div class="project-item">
           <div class="project-item-title">
-            <h4>Kinematic Calculator<br>(September 2018 - Present; HTML, CSS,
+            <h4>Kinematic Calculator<br>(September 2018 - October 2018; HTML, CSS,
             JavaScript)</h4>
           </div>
           <div class="project-item-content">
             <img src="Personal_Website/Images/experience-kinematic-equation-calculator.PNG"
               alt="">
             <p>
-              I am currently building a calculator to facilitate acquiring the
-              required values in kinematic problems. It heavily utilizes
-              JavaScript alongside jQuery as the scripting language of choice,
-              in order to compute the submitted values.
+              I built a calculator to facilitate acquiring the required values in kinematic
+              physics problems. It heavily utilizes JavaScript alongside jQuery as the
+              scripting language of choice, in order to compute the submitted values.
             </p>
           </div>
         </div>
