--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star filled"></i>
                 <i class="fas fa-star"></i>
               </td>
             </tr>
