--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
         focusing on the front end by reviewing my skills on it, completing my
         educational assignments, and working on several personal projects.
         <br><br>
-        At the moment, I am searching for a technology-related research position
-        or internship, in order to gain valuable real-world experience and push
-        my career forward.
+        At the moment, I am searching for a technology-related position, in
+        order to gain valuable real-world experience and push my career forward.
       </p>
     </div>
     <!-- End of About. -->
