--- a/New_Project/HTML/new_project.html
+++ b/New_Project/HTML/new_project.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-      <!-- Required meta tags. -->
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>New Project</title>
       <link href="../CSS/new_project.css" rel="stylesheet">
-      <link href="../Images/favicon.ico" rel="shortcut icon"
-        type="image/x-icon">
-      <link href="../Images/favicon-32x32.png" rel="shortcut icon"
-        type="image/x-icon">
-      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono"
-        rel="stylesheet">
-      <!-- Font Awesome tag. -->
       <link rel="stylesheet"
         href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-      <!-- Bootstrap tag. -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+      <link href="../Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+      <link href="../Images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon">
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     </head>
     <body>
-      <header class="container">
-        <div class="row">
-         <h1 class="col-sm-4 text-center">Heading</h1>
-         <nav class="col-sm-8 text-right">
-          <p>nav item 1</p>
-          <p>nav item 2</p>
-          <p>nav item 3</p>
-         </nav> 
-       </div>
-      </header>
       <p>Placeholder</p>
       
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-        </script>
+      </script>
       <script src="../JavaScript/new_project.js"></script>
     </body>
 </html>
