--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star filled"></i>
                 <i class="fas fa-star"></i>
               </td>
               <td>Java:</td>
