--- a/New_Project/HTML/new_project.html
+++ b/New_Project/HTML/new_project.html
@@ -3,18 +3,18 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>New Project</title>
+      <title>Pomodoro Timer</title>
       <link href="../CSS/new_project.css" rel="stylesheet">
       <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
       <link href="../Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
       <link href="../Images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     </head>
     <body>
-      <p>Placeholder</p>
+      <p>Pomodoro Timer</p>
       
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
       </script>
