Main site experience modified

--- a/index.html
+++ b/index.html
@@ -462,15 +462,16 @@
       <a href="New_Project/HTML/new_project.html" class="present" target="_blank">
         <div class="project-item">
           <div class="project-item-title">
-            <h4>New Project</h4>
-            <h5>(November 2018 - Present; ...)</h5>
+            <h4>Pomodoro Timer</h4>
+            <h5>(January 2019 - Present; HTML, CSS, JavaScript)</h5>
           </div>
           <div class="project-item-content">
-            <img src="Personal_Website/Images/experience-kinematic-equation-calculator.PNG"
+            <img src="Personal_Website/Images/experience-pomodoro.jpg"
             alt="">
             <p>
-              This is a placeholder for a new project that I plan to start soon.
-              The specifics of this task are currently unknown.
+              This is the current project I am working on. It will be a timer
+              that implements the Pomodoro Technique. This will assist users
+              in managing the time they spend on their duties.
             </p>
           </div>
         </div>
