--- a/New_Project/HTML/new_project.html
+++ b/New_Project/HTML/new_project.html
@@ -12,12 +12,13 @@
       <link href="../Images/favicon.ico" rel="shortcut icon" type="image/x-icon">
       <link href="../Images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon">
       <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
       <p>Pomodoro Timer</p>
       
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-      </script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="../JavaScript/new_project.js"></script>
     </body>
 </html>
