--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star filled"></i>
               </td>
               <td>Excel:</td>
               <td>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star filled"></i>
                 <i class="fas fa-star"></i>
               </td>
             </tr>
@@ -243,7 +243,7 @@
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
                 <i class="fas fa-star filled"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star filled"></i>
                 <i class="fas fa-star"></i>
               </td>
               <td>Git:</td>
