Minor resume changes.

--- a/Pomodoro_Timer/HTML/pomodoro_timer.html
+++ b/Pomodoro_Timer/HTML/pomodoro_timer.html
@@ -83,10 +83,10 @@
               <th>Long Break</th>
             </tr>
             <tr>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
+              <td id="total">0</td>
+              <td id="work">0</td>
+              <td id="short-break">0</td>
+              <td id="long-break">0</td>
             </tr>
           </table>
         </div>
