Updated personal website.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <a href="#experience-section" class="collapsed">Experience</a>
       <a href="#education-section" class="collapsed">Education</a>
       <a href="#contact-section" class="collapsed">Contact</a>
-      <a href="mailto:gonza858@umn.edu" class="collapsed">
+      <a href="mailto:xaviergonzalez884@gmail.com" class="collapsed">
         <i class="far fa-envelope fa-fw"></i> E-mail
       </a>
       <a href="https://github.com/User952" class="collapsed">
         <i class="fab fa-github fa-fw"></i> GitHub
       </a>
       <a href="Personal_Website/Other_Files/Resume.pdf" class="collapsed">
-        <i class="far fa-file-alt fa-fw"></i> Résumé
+        <i class="far fa-file-alt fa-fw"></i> Resume
       </a>
       <!-- End of Collapsed Navigation Bar. -->
       
@@ -493,8 +493,8 @@
           alt="Anoka-Ramsey Community College logo">
         <hr><hr>
         <ul>
-          <li>2014–2016</li>
-          <li>Postsecondary Enrollment Options</li>
+          <li>Fall 2014 – Spring 2016</li>
+          <li>Post Secondary Enrollment Options</li>
           <li>GPA: 4.0/4.0</li>
           <li>33 credits in General Education subjects</li>
           <li>Courses:
@@ -513,9 +513,9 @@
           alt="University of Minnesota logo">
         <hr><hr>
         <ul>
-          <li>2016–Present</li>
-          <li>Bachelor of Science, Computer Science (Expected May
-              2019)</li>
+          <li>Fall 2016 – Spring 2019</li>
+          <li>Bachelor of Science, Computer Science</li>
+          <li>Involved in clubs</li>
           <li>GPA: 3.1/4.0</li>
           <li>Courses:
             <ul>
@@ -536,9 +536,9 @@
         <h2>Contact</h2>
       </div>
       <div class="link">
-        <a href="mailto:gonza858@umn.edu">
+        <a href="mailto:xaviergonzalez884@gmail.com">
           <i class="far fa-envelope fa-2x fa-fw"></i>
-          <p>gonza858@umn.edu</p>
+          <p>xaviergonzalez884@gmail.com</p>
         </a>
       </div>
       <div class="link">
@@ -550,7 +550,7 @@
       <div class="link">
         <a href="Personal_Website/Other_Files/Resume.pdf">
           <i class="far fa-file-alt fa-2x fa-fw"></i>
-          <p>Résumé</p>
+          <p>Resume</p>
         </a>
       </div>
     </footer>
