--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
         <!-- Start of Collapsible Contact Section. -->
         <div id="contact-block-menu">
-          <a href="mailto:gonza858@umn.edu">
+          <a href="mailto:xaviergonzalez884@gmail.com">
             <i class="far fa-envelope fa-fw"></i> E-mail
           </a>
           <a href="https://github.com/User952">
@@ -93,19 +93,19 @@
         <h2>About</h2>
       </div>
       <p>
-        My name is Xavier Gonzalez and I am a college junior (senior
-        credit-wise) majoring in Computer Science at the University of Minnesota
-        Twin Cities. After completing my academic tasks, I usually devote the
-        rest of my time into honing my programming skills, being involved in
-        extracurriculars on campus (e.g., my Archery and Computing clubs), or
+        My name is Xavier Gonzalez and I am a college graduate with a Bachelor
+        of Science in Computer Science degree from the University of Minnesota
+        Twin Cities. Throughout my stay campus, I devoted my nonacademic time
+        into honing my programming skills, being involved in college
+        extracurricular activities (e.g., my Archery and Computing clubs), or
         staying healthy at the campus gym.
         <br><br>
-        My dream is to become a developer; I have not yet resolved upon either
-        the front- or back-end aspect of it (or possibly both). I am currently
-        focusing on the front end by reviewing my skills on it, completing my
-        educational assignments, and working on several personal projects.
+        My dream job is to become a front-end developer. I am currently
+        focusing on this task by reviewing my key skills, acquiring new
+        information, and working on several personal projects to showcase to
+        prospective employers.
         <br><br>
-        At the moment, I am searching for a technology-related position, in
+        I am currently searching for a technology-related position in
         order to gain valuable real-world experience and push my career forward.
       </p>
     </div>
@@ -466,12 +466,12 @@
             <h5>(January 2019 - Present; HTML, CSS, JavaScript)</h5>
           </div>
           <div class="project-item-content">
-            <img src="Personal_Website/Images/experience-pomodoro.jpg"
+            <img src="Personal_Website/Images/experience-pomodoro.png"
             alt="">
             <p>
               This is the current project I am working on. It will be a timer
               that implements the Pomodoro Technique. This will assist users
-              in managing the time they spend on their duties.
+              in managing the time they spend on their tasks.
             </p>
           </div>
         </div>
