Added back button to main page.

--- a/Kinematic_Calculator/HTML/kinematic_calculator.html
+++ b/Kinematic_Calculator/HTML/kinematic_calculator.html
@@ -16,7 +16,7 @@
     <body>
       <!-- Start of Header. -->
       <header>
-        <a id="title" href="#">Kinematic Calculator</a>
+        <a id="title" href="../../index.html">Kinematic Calculator</a>
         <a id="about" href="#">About</a>
       </header>
       <div id="about-description">
