--- a/Pomodoro_Timer/HTML/pomodoro_timer.html
+++ b/Pomodoro_Timer/HTML/pomodoro_timer.html
@@ -27,7 +27,7 @@
           <h4>About</h4>
         </div>
         <div class="col-md-6" id="title">
-          <a href="pomodoro_timer.html"><h2>Pomodoro Timer</h2></a>
+          <a href="../../index.html"><h2>Pomodoro Timer</h2></a>
         </div>
         <div class="col-md-3" id="instructions">
           <h4>Instructions</h4>
